frontend/src/components/navigation/navigation.css
.navigation {
  background: white;
  margin: 2rem;
  border-radius: 1rem;
  padding: 2rem;
  display: flex;
  flex-direction: column;
}

.navigation .logo {
  display: flex;
  justify-content: center;
  font-family: Kreon;
  font-size: 2rem;
  user-select: none;
}

.navigation .logo img {
  width: 48px;
  height: 40px;
  padding-right: 1rem;
}

.navigation .logo span {
  display: flex;
  align-items: center;
  justify-content: center;
  color: #333;
}

.navigation .user-panel {
  margin-top: auto;
}

.navigation .user-panel .logout,
.user {
  width: 100%;
  margin-top: 1rem;
  border-radius: 0.5rem;
}

.navigation .user-panel .logout {
  height: 3rem;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: .3s;
  background: #FF8585;
}

.navigation .user-panel .logout:hover {
  background: #fd5656;
}

.navigation .user-panel .logout .icon {
  height: 2rem;
  width: 2rem;
  color: white;
}

.navigation .user-panel .logout span {
  font-size: 1.5rem;
  color: white;
  user-select: none;
  padding-left: 0.5rem;
  width: 30%;
}

.navigation .user-panel .user {
  background: #D5D5D5;
  cursor: auto;
}

.navigation .user-panel .user p {
  margin: 5px;
  text-align: start;
  color: #333;
  user-select: text;
}

.navigation .user-panel .user .name {
  font-size: 1.5rem;
}

.navigation .user-panel .user .email {
  font-size: 1.2rem;
  margin-left: 7px;
}

.navigation .links {
  margin-top: 2rem;
}

.navigation .links .link {
  height: 3rem;
  border-radius: 0.5rem;
  transition: .4s;
  font-size: 1.5rem;
  padding: 1rem;
  display: flex;
  align-items: center;
  color: #333;
  margin-bottom: 1rem;
  user-select: none;
}

.navigation .links .link.active,
.navigation .links .link:hover {
  background: #D9D9D9;
}

.navigation .links .link .icon {
  color: #333;
  margin-right: 1rem;
}

.navigation .user-panel .switcher {
  display: flex;
  gap: 0.5rem;
  place-self: center;
}

.navigation .user-panel .button {
  padding: 0.5rem 1rem;
  font-size: 1rem;
  transition: all 0.4s ease;
  width: 7.5rem;
  border-radius: 0.5rem;
}

.navigation .user-panel .button.active {
  background-color: #007bff;
  color: white;
}

.navigation .user-panel .button:hover:not(.active) {
  background-color: #f1f1f1;
}

.navigation .user-panel .button:focus {
  background-color: #007bff;
  color: white;
}

.navigation .user-panel .button.active:hover {
  background-color: #0056b3;
}

.navigation .user-panel .button:not(.active):hover {
  background-color: #d4d4d4;
}

